force-app/main/default/objects/Location_Rate__c/Location_Rate__c.object-meta.xml
<CustomObject>
    <label>Location Rate</label>
    <nameField>
        <displayFormat>LA-{00000}</displayFormat>
        <label>Location Rate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Rates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>