force-app/main/default/objects/Location_Rate__c/fields/Rate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Rate_Amount__c</fullName>
    <label>Rate Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>