force-app/main/default/objects/Location_Rate__c/fields/Rate_Type__c.field-meta.xml
<CustomField>
    <fullName>Rate_Type__c</fullName>
    <label>Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Rate</fullName>
            </value>
            <value>
                <fullName>Care Manager Rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>