force-app/main/default/objects/Location_Rate__c/fields/Type_of_Rate__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Rate__c</fullName>
    <label>Rate Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Type_of_Rate</valueSetName>
    </valueSet>
</CustomField>