force-app/main/default/objects/Location_Rate__c/fields/WellSpring_Location__c.field-meta.xml
<CustomField>
    <fullName>WellSpring_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WellSpring Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Location Rates</relationshipLabel>
    <relationshipName>Location_Rates</relationshipName>
    <type>Lookup</type>
</CustomField>